# Change log

## Supplementary figures

11th Nov 2022

Added supplementary figures.

Moved plot of sibship probabilities to SI.

Added sundry files I hadn't added before for some reason.

## Updated main figures

11th November 2022

Moved distributions of number of mating events and proporting missing fathers
to its own figure. Posterior plot now only summarises shape, scale and mixture.

Changed numbering of other figures accordingly.

## Latex manuscript

10th November 2022

Added files to create the manuscript. Tidied figure folders and changed these
to output EPS figures to 05_manuscript so they are in the same place as the 
.tex files.

## Code for 3 figures

Added code to plot the map, summaries of posterior distributinos with means and
96% CIs,  and figures describing dispersal events (histogram, cumulative curve,
summaries of median dispersal and sires >500m from the mother).

Edited README to detail the function used to plot weighted cumulative curves.

## Removed missing fathers from simulations

3rd November 2022

Removed the lines from simulation module that removes true fathers. I don't
think it's doing what I think its doing, and it's not a priority to present.

Added README for the simulations.

## Plot mating events

27th October 2022

Added analysis and plots for the relationship between array size and number of
sibships, and used this to infer the number of missing fathers.

The latter is based on a GLM using mating events averaged over iterations. There
is some funkiness with mating events with <2 offspring which I think I spurious.
This might be worth repeating using a separate GLM for each iteration.

## Power analysis simulations

27th October 2022

Added library code and script to run power analysis simulations.

This simulates mating events between mothers and real candidate father
genotypes, and generates families of full siblings of the same sizes as in 
the real data set. This then runs FAPS functions on those data and returns