@@ -127,45 +127,45 @@ bp
 1 setlinejoin
 10.00 setmiterlimit
 np
-45.99 265.42 m
+45.99 265.35 m
 175.30 0 l
 o
 np
-45.99 299.05 m
+45.99 299.00 m
 175.30 0 l
 o
 np
-45.99 332.67 m
+45.99 332.64 m
 175.30 0 l
 o
 np
-45.99 366.30 m
+45.99 366.29 m
 175.30 0 l
 o
 np
-45.99 399.93 m
+45.99 399.94 m
 175.30 0 l
 o
 1.07 setlinewidth
 [] 0 setdash
 np
-45.99 282.23 m
+45.99 282.17 m
 175.30 0 l
 o
 np
-45.99 315.86 m
+45.99 315.82 m
 175.30 0 l
 o
 np
-45.99 349.49 m
+45.99 349.47 m
 175.30 0 l
 o
 np
-45.99 383.12 m
+45.99 383.11 m
 175.30 0 l
 o
 np
-45.99 416.75 m
+45.99 416.76 m
 175.30 0 l
 o
 np
@@ -197,25 +197,25 @@ o
 0.71 setlinewidth
 [] 0 setdash
 1 setlinecap
-62.95 316.29 1.95 c p3
-91.23 324.90 1.95 c p3
-119.50 312.63 1.95 c p3
-147.78 396.18 1.95 c p3
-176.05 278.08 1.95 c p3
+62.95 316.31 1.95 c p3
+91.23 324.91 1.95 c p3
+119.50 312.68 1.95 c p3
+147.78 396.19 1.95 c p3
+176.05 278.04 1.95 c p3
 204.33 334.58 1.95 c p3
 1.07 setlinewidth
 [] 0 setdash
 0 setlinecap
 np
-61.54 326.58 m
+61.54 326.57 m
 2.83 0 l
 o
 np
-62.95 326.58 m
-0 -18.94 l
+62.95 326.57 m
+0 -18.87 l
 o
 np
-61.54 307.64 m
+61.54 307.70 m
 2.83 0 l
 o
 np
@@ -224,22 +224,22 @@ np
 o
 np
 91.23 339.33 m
-0 -22.38 l
+0 -22.34 l
 o
 np
-89.81 316.95 m
+89.81 316.99 m
 2.83 0 l
 o
 np
-118.09 321.50 m
+118.09 321.49 m
 2.83 0 l
 o
 np
-119.50 321.50 m
-0 -14.05 l
+119.50 321.49 m
+0 -13.85 l
 o
 np
-118.09 307.45 m
+118.09 307.64 m
 2.83 0 l
 o
 np
@@ -255,24 +255,24 @@ np
 2.83 0 l
 o
 np
-174.64 286.43 m
+174.64 286.41 m
 2.83 0 l
 o
 np
-176.05 286.43 m
-0 -17.82 l
+176.05 286.41 m
+0 -17.80 l
 o
 np
 174.64 268.61 m
 2.83 0 l
 o
 np
-202.91 339.93 m
+202.91 339.95 m
 2.83 0 l
 o
 np
-204.33 339.93 m
-0 -24.08 l
+204.33 339.95 m
+0 -24.10 l
 o
 np
 202.91 315.85 m
@@ -299,11 +299,11 @@ o
 0.00 0.00 226.77 425.20 cl
 /Font1 findfont 9 s
 0.3020 0.3020 0.3020 srgb
-41.06 279.00 (210.0) 1 0 t
-41.06 312.63 (212.5) 1 0 t
-41.06 346.26 (215.0) 1 0 t
-41.06 379.89 (217.5) 1 0 t
-41.06 413.51 (220.0) 1 0 t
+41.06 278.94 (210.0) 1 0 t
+41.06 312.59 (212.5) 1 0 t
+41.06 346.24 (215.0) 1 0 t
+41.06 379.88 (217.5) 1 0 t
+41.06 413.53 (220.0) 1 0 t
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
@@ -314,23 +314,23 @@ o
 1 setlinejoin
 10.00 setmiterlimit
 np
-43.25 282.23 m
+43.25 282.17 m
 2.74 0 l
 o
 np
-43.25 315.86 m
+43.25 315.82 m
 2.74 0 l
 o
 np
-43.25 349.49 m
+43.25 349.47 m
 2.74 0 l
 o
 np
-43.25 383.12 m
+43.25 383.11 m
 2.74 0 l
 o
 np
-43.25 416.75 m
+43.25 416.76 m
 2.74 0 l
 o
 0.00 0.00 226.77 425.20 cl
@@ -423,9 +423,9 @@ o
 10.00 setmiterlimit
 0.00 -0.00 226.77 248.03 r p3
 0.00 0.00 226.77 425.20 cl
-40.98 94.29 221.29 242.55 cl
+50.99 94.29 221.29 242.55 cl
 /bg { 1 1 1 srgb } def
-40.98 94.29 180.31 148.26 r p2
+50.99 94.29 170.30 148.26 r p2
 0.9216 0.9216 0.9216 srgb
 0.53 setlinewidth
 [] 0 setdash
@@ -433,69 +433,61 @@ o
 1 setlinejoin
 10.00 setmiterlimit
 np
-40.98 121.43 m
-180.31 0 l
+50.99 101.90 m
+170.30 0 l
 o
 np
-40.98 148.59 m
-180.31 0 l
+50.99 140.50 m
+170.30 0 l
 o
 np
-40.98 175.76 m
-180.31 0 l
+50.99 179.09 m
+170.30 0 l
 o
 np
-40.98 202.93 m
-180.31 0 l
-o
-np
-40.98 230.10 m
-180.31 0 l
+50.99 217.69 m
+170.30 0 l
 o
 1.07 setlinewidth
 [] 0 setdash
 np
-40.98 107.84 m
-180.31 0 l
+50.99 121.20 m
+170.30 0 l
 o
 np
-40.98 135.01 m
-180.31 0 l
+50.99 159.80 m
+170.30 0 l
 o
 np
-40.98 162.18 m
-180.31 0 l
+50.99 198.39 m
+170.30 0 l
 o
 np
-40.98 189.35 m
-180.31 0 l
+50.99 236.99 m
+170.30 0 l
 o
 np
-40.98 216.51 m
-180.31 0 l
-o
-np
-58.43 94.29 m
+67.47 94.29 m
 0 148.26 l
 o
 np
-87.51 94.29 m
+94.94 94.29 m
 0 148.26 l
 o
 np
-116.60 94.29 m
+122.41 94.29 m
 0 148.26 l
 o
 np
-145.68 94.29 m
+149.88 94.29 m
 0 148.26 l
 o
 np
-174.76 94.29 m
+177.34 94.29 m
 0 148.26 l
 o
 np
-203.84 94.29 m
+204.81 94.29 m
 0 148.26 l
 o
 /bg { 0 0 0 srgb } def
@@ -503,90 +495,90 @@ o
 0.71 setlinewidth
 [] 0 setdash
 1 setlinecap
-58.43 172.20 1.95 c p3
-87.51 172.72 1.95 c p3
-116.60 172.08 1.95 c p3
-145.68 165.23 1.95 c p3
-174.76 178.80 1.95 c p3
-203.84 171.81 1.95 c p3
+67.47 187.32 1.95 c p3
+94.94 179.83 1.95 c p3
+122.41 190.51 1.95 c p3
+149.88 114.93 1.95 c p3
+177.34 227.14 1.95 c p3
+204.81 171.90 1.95 c p3
 1.07 setlinewidth
 [] 0 setdash
 0 setlinecap
 np
-56.98 225.05 m
-2.91 0 l
+66.10 194.87 m
+2.74 0 l
 o
 np
-58.43 225.05 m
-0 -109.63 l
+67.47 194.87 m
+0 -16.52 l
 o
 np
-56.98 115.42 m
-2.91 0 l
+66.10 178.35 m
+2.74 0 l
 o
 np
-86.06 222.20 m
-2.91 0 l
+93.57 187.13 m
+2.74 0 l
 o
 np
-87.51 222.20 m
-0 -104.04 l
+94.94 187.13 m
+0 -19.86 l
 o
 np
-86.06 118.16 m
-2.91 0 l
+93.57 167.27 m
+2.74 0 l
 o
 np
-115.14 226.10 m
-2.91 0 l
+121.03 194.89 m
+2.75 0 l
 o
 np
-116.60 226.10 m
-0 -108.15 l
+122.41 194.89 m
+0 -12.15 l
 o
 np
-115.14 117.95 m
-2.91 0 l
+121.03 182.74 m
+2.75 0 l
 o
 np
-144.22 218.74 m
-2.91 0 l
+148.50 119.35 m
+2.75 0 l
 o
 np
-145.68 218.74 m
-0 -117.71 l
+149.88 119.35 m
+0 -18.32 l
 o
 np
-144.22 101.03 m
-2.91 0 l
+148.50 101.03 m
+2.75 0 l
 o
 np
-173.31 235.81 m
-2.90 0 l
+175.97 235.81 m
+2.75 0 l
 o
 np
-174.76 235.81 m
-0 -116.84 l
+177.34 235.81 m
+0 -16.14 l
 o
 np
-173.31 118.97 m
-2.90 0 l
+175.97 219.67 m
+2.75 0 l
 o
 np
-202.39 222.87 m
-2.91 0 l
+203.44 188.84 m
+2.74 0 l
 o
 np
-203.84 222.87 m
-0 -103.04 l
+204.81 188.84 m
+0 -21.85 l
 o
 np
-202.39 119.83 m
-2.91 0 l
+203.44 166.99 m
+2.74 0 l
 o
 0.2000 0.2000 0.2000 srgb
 1 setlinecap
-40.98 94.29 180.31 148.26 r p1
+50.99 94.29 170.30 148.26 r p1
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
@@ -605,11 +597,10 @@ o
 0.00 0.00 226.77 425.20 cl
 /Font1 findfont 9 s
 0.3020 0.3020 0.3020 srgb
-36.05 104.61 (0.24) 1 0 t
-36.05 131.78 (0.26) 1 0 t
-36.05 158.95 (0.28) 1 0 t
-36.05 186.12 (0.30) 1 0 t
-36.05 213.28 (0.32) 1 0 t
+46.06 117.97 (0.2075) 1 0 t
+46.06 156.57 (0.2100) 1 0 t
+46.06 195.16 (0.2125) 1 0 t
+46.06 233.76 (0.2150) 1 0 t
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
@@ -620,23 +611,19 @@ o
 1 setlinejoin
 10.00 setmiterlimit
 np
-38.24 107.84 m
+48.25 121.20 m
 2.74 0 l
 o
 np
-38.24 135.01 m
+48.25 159.80 m
 2.74 0 l
 o
 np
-38.24 162.18 m
+48.25 198.39 m
 2.74 0 l
 o
 np
-38.24 189.35 m
-2.74 0 l
-o
-np
-38.24 216.51 m
+48.25 236.99 m
 2.74 0 l
 o
 0.00 0.00 226.77 425.20 cl
@@ -657,50 +644,50 @@ o
 1 setlinejoin
 10.00 setmiterlimit
 np
-58.43 91.55 m
+67.47 91.55 m
 0 2.74 l
 o
 np
-87.51 91.55 m
+94.94 91.55 m
 0 2.74 l
 o
 np
-116.60 91.55 m
+122.41 91.55 m
 0 2.74 l
 o
 np
-145.68 91.55 m
+149.88 91.55 m
 0 2.74 l
 o
 np
-174.76 91.55 m
+177.34 91.55 m
 0 2.74 l
 o
 np
-203.84 91.55 m
+204.81 91.55 m
 0 2.74 l
 o
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
 /Font1 findfont 8 s
 0.3020 0.3020 0.3020 srgb
-64.18 23.57 (Restr) 90 ta
+73.22 23.57 (Restr) 90 ta
 0.120 (icted kur) tb
 0.320 (tosis) tb gr
-93.26 10.88 (Shor) 90 ta
+100.68 10.88 (Shor) 90 ta
 0.320 (t-r) tb
 -0.080 (ange dispersal) tb gr
-122.34 28.90 (P) 90 ta
+128.15 28.90 (P) 90 ta
 -0.400 (enalise kur) tb
 0.320 (tosis) tb gr
-151.42 11.12 (F) 90 ta
+155.62 11.12 (F) 90 ta
 -0.240 (e) tb
 -0.160 (w) tb
 -0.080 (er missing f) tb
 -0.240 (athers) tb gr
-180.50 15.12 (More missing f) 90 ta
+183.09 15.12 (More missing f) 90 ta
 -0.240 (athers) tb gr
-209.59 89.36 (No mixture) 1 90 t
+210.56 89.36 (No mixture) 1 90 t
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
 0.00 0.00 226.77 425.20 cl
